--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,69 +1,77 @@
-<h2>新規会員登録</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-40 col-md-40 col-lg-5 px-5 px-sm-0">
+     <h2>新規会員登録</h2>
+     <table>
+     <%= form_with model:@customer,url: customer_registration_path,local: true do |f| %>
+     <%= render "customers/shared/error_messages", resource: resource %>
+      <div class="field">
+      <tr>
+       <th><%= f.label :（姓） %></th>
+       <th><%= f.text_field :last_name,autofocus: true %></th>
+       <th><%= f.label :（名） %></th>
+       <th><%= f.text_field :first_name,autofocus: true %></th>
+      </tr>
+     </div>
 
-  <%= form_with model:@customer,url: customer_registration_path,local: true do |f| %>
-  <%= render "customers/shared/error_messages", resource: resource %>
-<table class="container">
-  <div class="field">
-   <thead>
-    <tr>
-    <%= f.label :（姓） %>
-    <%= f.text_field :last_name,autofocus: true %>
-    <%= f.label :（名） %>
-    <%= f.text_field :first_name,autofocus: true %>
-    </tr>
-   </thead>
-  </div>
+     <div class="field">
+      <tr>
+       <th><%= f.label :（セイ） %></th>
+       <th><%= f.text_field :last_name_kana,autofocus: true %></th>
+       <th><%= f.label :（メイ） %></th>
+       <th><%= f.text_field :first_name_kana,autofocus: true %></th>
+      </tr>
+     </div>
 
-  <div class="field">
-   <thead>
-    <tr>
-    <%= f.label :（セイ） %>
-    <%= f.text_field :last_name_kana,autofocus: true %>
-    <%= f.label :（メイ） %>
-    <%= f.text_field :first_name_kana,autofocus: true %>
-    </tr>
-   </thead>
-  </div>
+     <div class="field">
+      <tr>
+       <th><%= f.label :メールアドレス %></th>
+       <th><%= f.email_field :email, autofocus: true, autocomplete: "email" %></th>
+      </tr>
+     </div>
 
-  <div class="field">
-   <thead>
-    <tr>
-    <%= f.label :メールアドレス %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-    </tr>
-   </thead>
-  </div>
+     <div class="field">
+      <tr>
+       <th><%= f.label :郵便番号（ハイフンなし） %></th>
+       <th><%= f.text_field :postal_code,autofocus: true %></th>
+      </tr>
+    </div>
 
-  <div class="field">
-    <%= f.label :郵便番号（ハイフンなし） %>
-    <%= f.text_field :postal_code,autofocus: true %>
-  </div>
+    <div class="field">
+     <tr>
+      <th><%= f.label :住所 %></th>
+      <th><%= f.text_area :adress,autofocus: true %></th>
+     </tr>
+    </div>
 
-  <div class="field">
-    <%= f.label :住所 %>
-    <%= f.text_area :adress,autofocus: true %>
-  </div>
+    <div class="field">
+     <tr>
+      <th><%= f.label :電話番号（ハイフンなし） %></th>
+      <th><%= f.text_field :telephone_number,autofocus: true %></th>
+     </tr>
+    </div>
 
-  <div class="field">
-    <%= f.label :電話番号（ハイフンなし） %>
-    <%= f.text_field :telephone_number,autofocus: true %>
-  </div>
+    <div class="field">
+     <tr>
+      <th><%= f.label :パスワード（６文字以上） %></th>
+      <th><%= f.password_field :password, autocomplete: "new-password" %></th>
+     </tr>
+    </div>
 
-  <div class="field">
-    <%= f.label :パスワード（６文字以上） %>
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :パスワード（確認用） %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field">
+     <tr>
+      <th> <%= f.label :パスワード（確認用） %></th>
+      <th><%= f.password_field :password_confirmation, autocomplete: "new-password" %></th>
+     </tr>
+   </div>
+  </table>
 
   <div class="actions">
-    <%= f.submit "新規登録",class: "btn btn-primary" %>
+   <%= f.submit "新規登録",class: "btn btn-primary" %>
   </div>
-<% end %>
-</table>
-<br/>
-<h4>既に登録済みの方</h4>
-<a><%=link_to 'こちら', customer_session_path %>からログインしてください。</a>
+  <% end %><br/>
+  <h4>既に登録済みの方</h4>
+  <a><%=link_to 'こちら', customer_session_path %>からログインしてください。</a>
+  </div>
+ </div>
+</div>
