--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <header>
+<header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
      <%= link_to "NaganoCake",root_path,class:'navbar-brand' %>
@@ -23,13 +23,13 @@
       <ul class="navbar-nav ml-auto">
       <% if customer_signed_in? %>
       <li>
-       <%= link_to "マイページ",about_path,class: 'fas fa-home nav-link text-light' %>
+       <%= link_to "マイページ",root_path,class: 'fas fa-home nav-link text-light' %>
        </li>
       <li>
-       <%= link_to "商品一覧",about_path,class: 'fas fa-users nav-link text-light' %>
+       <%= link_to "商品一覧",root_path,class: 'fas fa-users nav-link text-light' %>
        </li>
       <li>
-       <%= link_to "カート",about_path,class: 'fas fa-book-open nav-link text-light' %>
+       <%= link_to "カート",root_path,class: 'fas fa-book-open nav-link text-light' %>
        </li>
       <li>
        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %>
@@ -39,7 +39,7 @@
        <%= link_to "About",about_path,class: 'fas fa-link nav-link text-light' %>
        </li>
       <li>
-       <%= link_to "商品一覧",about_path,class: 'fas fa-home nav-link text-light' %>
+       <%= link_to "商品一覧",root_path,class: 'fas fa-home nav-link text-light' %>
        </li>
       <li>
        <%= link_to "新規登録", new_customer_registration_path,class: 'fas fa-user-plus nav-link text-light' %>
