--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<h1>ジャンル一覧・追加</h1>
+
+<%= form_with model: @genre,url: '/admin/genres',local:true do |f| %>
+<div class="form_group">
+ <label for="genre_name">ジャンル名</label><br/>
+ <%= f.text_field :name %>
+ </div><br/>
+ <%= f.submit '新規登録' ,class: "btn btn-success" %>
+ <% end %>
+<br>
+<table class="table table-hover table-inverse">
+ <tr>
+<th>ジャンル</th>
+</tr>
+<tr>
+<% @genres.each do |genre| %>
+ <td><%= genre.name %></td>
+ <td><%= link_to "編集する",edit_admin_genre_path(genre.id),class: "btn btn-success" %></td>
+</tr>
+<% end %>
+</table>
