--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-40 col-md-40 col-lg-5 px-5 px-sm-0">
-     <h2>新規会員登録</h2>
-     <table>
+     <h2>新規会員登録</h2><br/>
+     <br/><table>
      <%= form_with model:@customer,url: customer_registration_path,local: true do |f| %>
      <%= render "customers/shared/error_messages", resource: resource %>
       <div class="field">
@@ -65,13 +64,12 @@
      </tr>
    </div>
   </table>
-
+　<br/>
   <div class="actions">
    <%= f.submit "新規登録",class: "btn btn-primary" %>
   </div>
   <% end %><br/>
   <h4>既に登録済みの方</h4>
   <a><%=link_to 'こちら', customer_session_path %>からログインしてください。</a>
-  </div>
  </div>
 </div>
