--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-<header>
+ <body>
+  <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
      <%= link_to "NaganoCake",root_path,class:'navbar-brand' %>
@@ -24,35 +24,51 @@
       <% if customer_signed_in? %>
       <li>
        <%= link_to "マイページ",root_path,class: 'fas fa-home nav-link text-light' %>
-       </li>
+      </li>
       <li>
        <%= link_to "商品一覧",root_path,class: 'fas fa-users nav-link text-light' %>
-       </li>
+      </li>
       <li>
        <%= link_to "カート",root_path,class: 'fas fa-book-open nav-link text-light' %>
-       </li>
+      </li>
       <li>
        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %>
-       </li>
-      <% else %>
-       <li>
-       <%= link_to "About",about_path,class: 'fas fa-link nav-link text-light' %>
-       </li>
+      </li>
+      <% elsif admin_signed_in? %>
       <li>
        <%= link_to "商品一覧",root_path,class: 'fas fa-home nav-link text-light' %>
-       </li>
+      </li>
+      <li>
+       <%= link_to "会員一覧",root_path,class: 'fas fa-users nav-link text-light' %>
+      </li>
+      <li>
+       <%= link_to "注文履歴一覧",root_path,class: 'fas fa-book-open nav-link text-light' %>
+      </li>
+      <li>
+       <%= link_to "ジャンル一覧",admin_genres_path,class: 'fas fa-book-open nav-link text-light' %>
+      </li>
+      <li>
+       <%= link_to "ログアウト", destroy_admin_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %>
+      </li>
+      <% else %>
+      <li>
+       <%= link_to "About",about_path,class: 'fas fa-link nav-link text-light' %>
+      </li>
+      <li>
+       <%= link_to "商品一覧",root_path,class: 'fas fa-home nav-link text-light' %>
+      </li>
       <li>
        <%= link_to "新規登録", new_customer_registration_path,class: 'fas fa-user-plus nav-link text-light' %>
-       </li>
+      </li>
       <li>
        <%= link_to "ログイン", new_customer_session_path,class: 'fas fa-sign-in-alt nav-link text-light' %>
-       </li>
+      </li>
       <% end %>
       </ul>
-      </div>
+     </div>
     </div>
    </nav>
   </header>
-    <%= yield %>
-  </body>
+  <%= yield %>
+ </body>
 </html>
