--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,53 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+<h1><%= @customer.full_name %>さんの会員情報編集</h1>
+
+<%= form_with model: @customer,url: "/admin/customers/#{@customer.id}",local:true do |f| %>
+<table>
+<div class="form-group">
+      <tr>
+       <th><%= f.label :（姓） %></th>
+       <th><%= f.text_field :last_name %></th>
+       <th><%= f.label :（名） %></th>
+       <th><%= f.text_field :first_name %></th>
+      </tr>
+     </div>
+
+     <div class="form-group">
+      <tr>
+       <th><%= f.label :（セイ） %></th>
+       <th><%= f.text_field :last_name_kana %></th>
+       <th><%= f.label :（メイ） %></th>
+       <th><%= f.text_field :first_name_kana %></th>
+      </tr>
+     </div>
+
+     <div class="form-group">
+      <tr>
+       <th><%= f.label :メールアドレス %></th>
+       <th><%= f.email_field :email, autofocus: true %></th>
+      </tr>
+     </div>
+
+     <div class="form-group">
+      <tr>
+       <th><%= f.label :郵便番号（ハイフンなし） %></th>
+       <th><%= f.text_field :postal_code %></th>
+      </tr>
+     </div>
+
+     <div class="form-group">
+      <tr>
+       <th><%= f.label :住所 %></th>
+       <th><%= f.text_area :address %></th>
+      </tr>
+     </div>
+
+     <div class="form-group">
+      <tr>
+       <th><%= f.label :電話番号（ハイフンなし） %></th>
+       <th><%= f.text_field :telephone_number %></th>
+      </tr>
+     </div>
+    </table>
+</div>
+<%= f.submit '変更を保存',class: "btn btn-primary"  %>
+<% end %>
