--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<h1>会員一覧</h1>
+
+<table>
+  <tr>
+    <th>商品ID</th>
+    <th>氏名</th>
+    <th>メールアドレス</th>
+    <th>ステータス</th>
+  </tr>
+
+  <% @customers.each do |customer| %>
+  <tr>
+　<td><%= customer.id %></td>
+  <td><%= customer.full_name %></td>
+  <td><%= customer.email %></td>
+  <td><%= customer.is_active %></td>
+  </tr>
+<% end %>
+
+</table>
