--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<h1><%= @customer.full_name %>さんの会員詳細</h1>
+
+<div>
+ <p>会員ID:         <%= @customer.id %></p>
+ <p>氏名:　         <%= @customer.full_name %></p>
+ <p>フリガナ:　     <%= @customer.full_name_kana %></p>
+ <p>郵便番号:　     <%= @customer.postal_code %></p>
+ <p>住所:　         <%= @customer.address %></p>
+ <p>電話番号:       <%= @customer.telephone_number %></p>
+ <p>メールアドレス: <%= @customer.email %></p>
+ <p>会員ステータス</p>
+</div>
