--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -5,7 +5,7 @@
 
   <p>商品説明:<%= @item.introduction %></p>
   <p>ジャンル</p>
-  <p>税抜き価格  <%= @item.price.to_s(:dalimited) %>(<%= @item.add_tax_price.to_s( :dalimited) %>）円
+  <p>税抜き価格  <%= @item.price.to_s(:delimited) %>(<%= @item.add_tax_price.to_s( :delimited) %>）円
   <br/>(税込価格)
 
   <br/><%= link_to "編集する",edit_admin_item_path(@item.id),class: "btn btn-success" %></td>
