--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,70 +1,72 @@
 <div class="container">
  <div class="row">
-  <h2>新規会員登録</h2><br/>
+  <h2>新規会員登録</h2>
+ </div><br/>
+ <div class="row">
    <br/><table>
     <%= form_with model:@customer,url: customer_registration_path,local: true do |f| %>
     <%= render "customers/shared/error_messages", resource: resource %>
-     <div class="field">
+     <div class="form-group">
       <tr>
        <th><%= f.label :（姓） %></th>
-       <th><%= f.text_field :last_name,autofocus: true,placeholder:"山田" %></th>
+       <th><%= f.text_field :last_name,autofocus: true, placeholder:"山田", class: 'form-control'%></th>
        <th><%= f.label :（名） %></th>
-       <th><%= f.text_field :first_name,autofocus: true,placeholder:"太郎" %></th>
+       <th><%= f.text_field :first_name,autofocus: true, placeholder:"太郎", class: 'form-control' %></th>
       </tr>
      </div>
 
-     <div class="field">
+     <div class="form-group">
       <tr>
        <th><%= f.label :（セイ） %></th>
-       <th><%= f.text_field :last_name_kana,autofocus: true,placeholder:"ヤマダ" %></th>
+       <th><%= f.text_field :last_name_kana,autofocus: true,placeholder:"ヤマダ", class: 'form-control' %></th>
        <th><%= f.label :（メイ） %></th>
-       <th><%= f.text_field :first_name_kana,autofocus: true,placeholder:"タロウ" %></th>
+       <th><%= f.text_field :first_name_kana,autofocus: true,placeholder:"タロウ", class: 'form-control' %></th>
       </tr>
      </div>
 
-     <div class="field">
+     <div class="form-group">
       <tr>
        <th><%= f.label :メールアドレス %></th>
-       <th><%= f.email_field :email, autofocus: true, autocomplete: "email",placeholder:"sample@gmail.com" %></th>
+       <th><%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"sample@gmail.com", class: 'form-control' %></th>
       </tr>
      </div>
 
-     <div class="field">
+     <div class="form-group">
       <tr>
        <th><%= f.label :郵便番号（ハイフンなし） %></th>
-       <th><%= f.text_field :postal_code,autofocus: true,placeholder:"0000000" %></th>
+       <th><%= f.text_field :postal_code,autofocus: true, placeholder:"0000000", class: 'form-control' %></th>
       </tr>
      </div>
 
-     <div class="field">
+     <div class="form-group">
       <tr>
        <th><%= f.label :住所 %></th>
-       <th><%= f.text_area :adress,autofocus: true,placeholder:"東京都渋谷区代々木神園町0-0" %></th>
+       <th><%= f.text_area :address,autofocus: true, placeholder:"東京都渋谷区代々木神園町0-0", class: 'form-control' %></th>
       </tr>
      </div>
 
-     <div class="field">
+     <div class="form-group">
       <tr>
        <th><%= f.label :電話番号（ハイフンなし） %></th>
-       <th><%= f.text_field :telephone_number,autofocus: true,placeholder:"09000000000" %></th>
+       <th><%= f.text_field :telephone_number,autofocus: true, placeholder:"09000000000", class: 'form-control' %></th>
       </tr>
      </div>
 
-     <div class="field">
+     <div class="form-group">
       <tr>
        <th><%= f.label :パスワード（６文字以上） %></th>
-       <th><%= f.password_field :password, autocomplete: "new-password" %></th>
+       <th><%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %></th>
       </tr>
      </div>
 
-     <div class="field">
+     <div class="form-group">
       <tr>
        <th> <%= f.label :パスワード（確認用） %></th>
-       <th><%= f.password_field :password_confirmation, autocomplete: "new-password" %></th>
+       <th><%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %></th>
       </tr>
      </div>
     </table>
-　 <br/>
+   </div>
   <div class="actions">
    <%= f.submit "新規登録",class: "btn btn-primary" %>
   </div>
