--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
  <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <div class="container">
      <%= link_to "NaganoCake",root_path,class:'navbar-brand' %>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
       <ul class="navbar-nav ml-auto">
       <% if customer_signed_in? %>
       <li>
-       <%= link_to "マイページ",root_path,class: 'fas fa-home nav-link text-light' %>
+       <%= link_to "マイページ",customers_my_page_path,class: 'fas fa-home nav-link text-light' %>
       </li>
       <li>
        <%= link_to "商品一覧",root_path,class: 'fas fa-users nav-link text-light' %>
@@ -39,7 +39,7 @@
        <%= link_to "商品一覧",root_path,class: 'fas fa-home nav-link text-light' %>
       </li>
       <li>
-       <%= link_to "会員一覧",root_path,class: 'fas fa-users nav-link text-light' %>
+       <%= link_to "会員一覧",admins_customers_path,class: 'fas fa-users nav-link text-light' %>
       </li>
       <li>
        <%= link_to "注文履歴一覧",root_path,class: 'fas fa-book-open nav-link text-light' %>
