--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Public::Customers#show</h1>
-<p>Find me in app/views/public/customers/show.html.erb</p>
+<h2>マイページ</h2>
+<h2>登録情報</h2>　<%= link_to '編集する',customers_edit_page_path,class: "btn btn-primary" %>
+<div>
+ <p>氏名:　         <%= @customer.full_name %></p>
+ <p>カナ:　     　　<%= @customer.full_name_kana %></p>
+ <p>郵便番号:　     <%= @customer.postal_code %></p>
+ <p>住所:　         <%= @customer.address %></p>
+ <p>電話番号:       <%= @customer.telephone_number %></p>
+ <p>メールアドレス: <%= @customer.email %></p>
+</div>
+<h4>配送先　一覧を見る</h4>
+<h4>注文履歴　一覧を見る</h4>
