--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,2 +1,8 @@
-<h1>Public::Customers#unsubscribe</h1>
-<p>Find me in app/views/public/customers/unsubscribe.html.erb</p>
+<h4>本当に退会しますか？</h4>
+
+退会すると、会員情報や<br/>
+これまでの購入履歴が閲覧できなくなります。<br/>
+退会する場合は、「退会する」をクリックしてください。<br/>
+
+<%= link_to '退会しない',customers_my_page_path(current_customer),class: "btn btn-primary" %>
+<%= link_to '退会する',customers_withdraw_path, data: { confirm: "本当に退会しますか？"},class: "btn btn-danger" %>
