配送先一覧・編集

--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,2 +1,30 @@
-<h1>Public::Addresses#edit</h1>
-<p>Find me in app/views/public/addresses/edit.html.erb</p>
+<h1>配送先編集</h1>
+
+<%= form_with model: @address,url: "/addresses/#{@address.id}",local:true do |f| %>
+<table>
+
+     <div class="form-group">
+      <tr>
+       <th><%= f.label :郵便番号（ハイフンなし） %></th>
+       <th><%= f.text_field :postal_code %></th>
+      </tr>
+     </div>
+
+     <div class="form-group">
+      <tr>
+       <th><%= f.label :住所 %></th>
+       <th><%= f.text_area :address %></th>
+      </tr>
+     </div>
+
+     <div class="form-group">
+      <tr>
+       <th><%= f.label :宛名 %></th>
+       <th><%= f.text_field :name %></th>
+      </tr>
+     </div>
+
+    </table>
+</div>
+<%= f.submit '変更を保存',class: "btn btn-primary"  %>
+<% end %>
