--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -47,6 +47,13 @@
        <th><%= f.text_field :telephone_number %></th>
       </tr>
      </div>
+     <div class="form-group">
+      <tr>
+       <th><%= f.label :会員ステータス %></th>
+       <th><%= f.radio_botton :is_deleted, true %></th>
+       <th><%= f.label :is_deleted,'有効',:true %></th>
+      </tr>
+     </div>
     </table>
 </div>
 <%= f.submit '変更を保存',class: "btn btn-primary"  %>
