--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -13,7 +13,7 @@
 　<td><%= customer.id %></td>
   <td><%= customer.full_name %></td>
   <td><%= customer.email %></td>
-  <td><%= customer.is_active %></td>
+  <td><%= customer.is_deleted %></td>
   </tr>
 <% end %>
 
