--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -5,4 +5,4 @@
 退会する場合は、「退会する」をクリックしてください。<br/>
 
 <%= link_to '退会しない',customers_my_page_path(current_customer),class: "btn btn-primary" %>
-<%= link_to '退会する',customers_withdraw_path, data: { confirm: "本当に退会しますか？"},class: "btn btn-danger" %>
+<%= link_to '退会する',customers_withdraw_path, method: :patch, data: { confirm: "本当に退会しますか？"},class: "btn btn-danger" %>
