Finish Topページレイアウト

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,9 @@
-<h2>ようこそ、ながのCAKEへ！<br>
-    このサイトは、ケーキ販売のECサイトです。<br>
-    会員でない方も商品の閲覧はできますが、<br>
-    購入には会員登録が必要になります。
-</h2>
+  <div class="top-visual" >
+    <div class="top-visual-content">
+     <h2>ようこそ、ながのCAKEへ！</br></br>
+         このサイトは、ケーキ販売のECサイトです。<br>
+         会員でない方も商品の閲覧はできますが、<br>
+         購入には会員登録が必要になります。
+     </h2>
+  </div>
+</div>
