--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,36 @@
  @import "bootstrap";
  @import 'font-awesome-sprockets';
  @import 'font-awesome';
+ @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
+
+header{
+ font-family: fantasy,'Noto Sans JP',sans-serif;
+ background-color:#CC9966;
+}
+
+body{
+  font-family: 'Noto Sans JP',sans-serif;
+}
+
+.footer{
+ background-color:#CC9966;
+ height:50px;
+}
+
+.top-visual{
+  width: 100%;
+  height: 600px;
+  background-image: url(sweets2.JPG);
+  background-size: cover;
+  background-position: center;
+}
+
+.top-visual-content{
+  width: 60%;
+  height: 600px;
+  background-color: rgba(0, 0, 0, 0.5); /* 背景色を半透明の黒にする */
+  text-align: center;
+  padding-top: 105px;
+  margin-left: 300px;
+  color: #fff;
+}
