--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
- <div class="row">
+ <div class="row mt-3">
   <h2>新規会員登録</h2>
- </div><br/>
+ </div>
  <div class="row">
-   <br/><table>
+ <table class="table">
     <%= form_with model:@customer,url: customer_registration_path,local: true do |f| %>
     <%= render "customers/shared/error_messages", resource: resource %>
      <div class="form-group">
@@ -65,13 +65,18 @@
        <th><%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %></th>
       </tr>
      </div>
+     <div class="action">
+      <tr>
+       <th><%= f.submit "新規登録",class: "btn btn-primary" %></th>
+      </tr>
+      </div>
     </table>
+    </div>
    </div>
-  <div class="actions">
-   <%= f.submit "新規登録",class: "btn btn-primary" %>
+  <% end %>
+  <div class="container mb-3">
+  <h4><既に登録済みの方></h4>
+  <a><%=link_to 'こちら', customer_session_path %> からログインしてください。</a>
   </div>
-  <% end %><br/>
-  <h4>既に登録済みの方</h4>
-  <a><%=link_to 'こちら', customer_session_path %>からログインしてください。</a>
  </div>
 </div>
