--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
  <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
+    <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
      <%= link_to "NaganoCake",root_path,class:'navbar-brand' %>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,29 +26,29 @@
        <%= link_to "マイページ",customers_my_page_path,class: 'fas fa-home nav-link text-light' %>
       </li>
       <li>
-       <%= link_to "商品一覧",root_path,class: 'fas fa-users nav-link text-light' %>
+       <%= link_to "商品一覧",items_path,class: 'fas fa-stroopwafel nav-link text-light' %>
       </li>
       <li>
-       <%= link_to "カート",root_path,class: 'fas fa-book-open nav-link text-light' %>
+       <%= link_to "カート",root_path,class: 'fas fa-shopping-cart nav-link text-light' %>
       </li>
       <li>
        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %>
       </li>
       <% elsif admin_signed_in? %>
       <li>
-       <%= link_to "商品一覧",root_path,class: 'fas fa-home nav-link text-light' %>
+       <%= link_to "商品一覧",root_path,class: 'nav-link text-light' %>
       </li>
       <li>
-       <%= link_to "会員一覧",admin_customers_path,class: 'fas fa-users nav-link text-light' %>
+       <%= link_to "会員一覧",admin_customers_path,class: 'nav-link text-light' %>
       </li>
       <li>
-       <%= link_to "注文履歴一覧",root_path,class: 'fas fa-book-open nav-link text-light' %>
+       <%= link_to "注文履歴一覧",root_path,class: 'nav-link text-light' %>
       </li>
       <li>
-       <%= link_to "ジャンル一覧",admin_genres_path,class: 'fas fa-book-open nav-link text-light' %>
+       <%= link_to "ジャンル一覧",admin_genres_path,class: 'nav-link text-light' %>
       </li>
       <li>
-       <%= link_to "ログアウト", destroy_admin_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %>
+       <%= link_to "ログアウト", destroy_admin_session_path, method: :delete,class: 'nav-link text-light' %>
       </li>
       <% else %>
       <li>
@@ -70,5 +70,7 @@
    </nav>
   </header>
   <%= yield %>
+  <footer class="footer">
+  </footer>
  </body>
 </html>
