--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,4 +1,5 @@
-<h1>About</h1>
+<div class=container>
+<div class="about d-flex align-items-center" style="height:600px;">
 
 <h3>ながのCAKEは全国発送可能なケーキ屋さんです。<br>
     お子様からお年寄りの方までお召し上がりいただけるよう、<br>
@@ -6,3 +7,5 @@
     また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
     ぜひご注文ください
 </h3>
+</div>
+</div>
