--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Public::Items#index</h1>
-<p>Find me in app/views/public/items/index.html.erb</p>
+<h1>商品一覧</h1>
+ <div>
+  <% @items.each do |item| %>
+　<p><%= attachment_image_tag item, :image, format: 'jpg', size: '200x200' %></p>
+  <p><%= link_to item.name,item_path(item.id) %></p>
+  <p><%= item.price %>円</p>
+<% end %>
+</div>
