--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Public::Items#show</h1>
-<p>Find me in app/views/public/items/show.html.erb</p>
+<h1>商品詳細</h1>
+<div>
+  <p><%= attachment_image_tag @item, :image, format: 'jpg', size: '400x400' %></p>
+  <p>商品名:<%= @item.name %></p>
+
+  <p>商品説明:<%= @item.introduction %></p>
+  <p>ジャンル</p>
+  <p>税抜き価格  <%= @item.price.to_s(:delimited) %>(<%= @item.add_tax_price.to_s( :delimited) %>）円
+  <br/>(税込価格)
+
+</div>
