--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,14 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-     <%= link_to "NaganoCake",root_path,class:'navbar-brand' %>
+     <logo class="h3">
+     <%= link_to "NaganoCake",root_path,class:'text-white' %>
+     </logo>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
      </button>
      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav ml-auto d-flex align-items-center" style="height:40px;">
       <% if customer_signed_in? %>
       <li>
        <%= link_to "マイページ",customers_my_page_path,class: 'fas fa-home nav-link text-light' %>
@@ -36,7 +38,7 @@
       </li>
       <% elsif admin_signed_in? %>
       <li>
-       <%= link_to "商品一覧",root_path,class: 'nav-link text-light' %>
+       <%= link_to "商品一覧",items_path,class: 'nav-link text-light' %>
       </li>
       <li>
        <%= link_to "会員一覧",admin_customers_path,class: 'nav-link text-light' %>
@@ -55,7 +57,7 @@
        <%= link_to "About",about_path,class: 'fas fa-link nav-link text-light' %>
       </li>
       <li>
-       <%= link_to "商品一覧",root_path,class: 'fas fa-home nav-link text-light' %>
+       <%= link_to "商品一覧",items_path,class: 'fas fa-home nav-link text-light' %>
       </li>
       <li>
        <%= link_to "新規登録", new_customer_registration_path,class: 'fas fa-user-plus nav-link text-light' %>
