--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,11 +1,11 @@
-<div class=container>
-<div class="about d-flex align-items-center" style="height:600px;">
-
-<h3>ながのCAKEは全国発送可能なケーキ屋さんです。<br>
-    お子様からお年寄りの方までお召し上がりいただけるよう、<br>
-    様々なバリエーションをご用意しております。<br>
-    また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
-    ぜひご注文ください
-</h3>
-</div>
+<div class="about-visual">
+ <div class="about-visual-content">
+  <h3>ながのCAKEは全国発送可能なケーキ屋さんです。</br>
+      お子様からお年寄りの方までお召し上がりいただけるよう、</br>
+      様々なバリエーションをご用意しております。</br>
+      また、全国へ発送可能ですので</br>
+      「いつ」でも「どこ」でもご注文いただけます。</br>
+      ぜひご注文ください
+  </h3>
+ </div>
 </div>
