[Finish]商品レイアウト

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,8 +53,12 @@ body{
   color: black;
 }
 
-.container-log-in-content{
+.container-log-in-content,.container-sign-in-content{
   background-color:#DEB887;
+}
+
+.item{
+ margin:10px;
 }
 
 
