--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container-sign-in-content d-flex flex-column align-items-center justify-content-center" style="height:660px;">
+
  <div class="row mt-3">
   <h2>新規会員登録</h2>
  </div>
@@ -74,9 +75,8 @@
     </div>
    </div>
   <% end %>
-  <div class="container mb-3">
-  <h4><既に登録済みの方></h4>
-  <a><%=link_to 'こちら', customer_session_path %> からログインしてください。</a>
+  <div class="container-sign-in-content">
+  <h4 class="text-center"><既に登録済みの方></h4>
+   <div class="text-center"><%=link_to 'こちら', customer_session_path %>からログインしてください。</div>
   </div>
- </div>
-</div>
+<!--</div>-->
