--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,11 +1,15 @@
-<h1>商品詳細</h1>
-<div>
-  <p><%= attachment_image_tag @item, :image, format: 'jpg', size: '400x400' %></p>
+<div class="container-log-in-content ">
+</br>
+<h2 class="text-center font-weight-bold"><ins>商品詳細</ins></h2>
+　  <div class="row">
+　    <div class="col-4">
+  <%= attachment_image_tag @item, :image, format: 'jpg', size: '400x400', class:'rounded' %></div>
+  　    <div class=" col fw-bolder">
   <p>商品名:<%= @item.name %></p>
-
   <p>商品説明:<%= @item.introduction %></p>
-  <p>ジャンル</p>
-  <p>税抜き価格  <%= @item.price.to_s(:delimited) %>(<%= @item.add_tax_price.to_s( :delimited) %>）円
-  <br/>(税込価格)
-
+  <p>税抜き価格:<%= @item.price.to_s(:delimited) %>円</br>
+　   (税込価格): (<%= @item.add_tax_price.to_s( :delimited) %>円)</p>
+　   </div>
 </div>
+</div>
+
