--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,2 +1,6 @@
-<h1>Public::Orders#complete</h1>
-<p>Find me in app/views/public/orders/complete.html.erb</p>
+<div class="complete-visual" >
+   <div class="complete-content">
+    <h2>ご注文ありがとうございます！</br></br>
+    </h2>
+   </div>
+  </div>
