--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,6 @@ header{
  padding-top: 10px;
  font-family: fantasy,'Noto Sans JP',sans-serif;
  background-color:#550000;
-
 }
 
 body{
@@ -35,7 +34,7 @@ body{
  height:50px;
 }
 
-.top-visual,.about-visual{
+.top-visual,.about-visual,.complete-visual{
   width: 100%;
   height: 600px;
   background-image: url(sweets2.JPG);
@@ -43,7 +42,7 @@ body{
   background-position: center;
 }
 
-.top-visual-content,.about-visual-content{
+.top-visual-content,.about-visual-content,.complete-content{
   width: 100%;
   height: 600px;
   background-color: rgba(255, 255, 255, 0.5); /* 背景色を半透明にする */
@@ -53,12 +52,22 @@ body{
   color: black;
 }
 
-.container-log-in-content,.container-sign-in-content{
+.container-log-in-content,.container-sign-in-content,.container-my-page,
+.container-item{
   background-color:#DEB887;
 }
 
 .item{
  margin:10px;
 }
+
+.table1 td {
+ text-align-last: justify;
+ width: 50%;
+}
+
+// table td {
+//  width: 20%;
+// }
 
 
