--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
        <%= link_to "商品一覧",items_path,class: 'fas fa-stroopwafel nav-link text-light' %>
       </li>
       <li>
-       <%= link_to "カート",root_path,class: 'fas fa-shopping-cart nav-link text-light' %>
+       <%= link_to "カート",cart_items_path,class: 'fas fa-shopping-cart nav-link text-light' %>
       </li>
       <li>
        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %>
