--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,12 +1,18 @@
-<h2>マイページ</h2>
-<h2>登録情報</h2>　<%= link_to '編集する',customers_edit_page_path,class: "btn btn-primary" %>
-<div>
- <p>氏名:　         <%= @customer.full_name %></p>
- <p>カナ:　     　　<%= @customer.full_name_kana %></p>
- <p>郵便番号:　     <%= @customer.postal_code %></p>
- <p>住所:　         <%= @customer.address %></p>
- <p>電話番号:       <%= @customer.telephone_number %></p>
- <p>メールアドレス: <%= @customer.email %></p>
+<div class="container-sign-in-content d-flex flex-column align-items-center justify-content-center" style="height:700px;">
+　<h2><ins>マイページ</ins></h2>
+</br>
+<h5>登録情報<%= link_to '編集する',customers_edit_page_path,class: "btn btn-primary btn-sm ml-3" %></h5>
+ <div class="row d-flex flex-column align-items-center justify-content-center">
+　 <table class="table">
+ <tr><th style="width: 50%">氏名:</th>　         <td><%= @customer.full_name %></td></tr>
+ <tr><th style="width: 50%">カナ:</th>     　　<td><%= @customer.full_name_kana %></td></tr>
+ <tr><th style="width: 50%">郵便番号:</th>　     <td><%= @customer.postal_code %></td></tr>
+ <tr><th style="width: 50%">住所:</th>       <td><%= @customer.address %></td></tr>
+ <tr><th style="width: 50%">電話番号:</th>    <td><%= @customer.telephone_number %></td></tr>
+ <tr><th style="width: 50%">メールアドレス:</th> <td><%= @customer.email %></td></tr>
+</table>
+</br>
+<h5>配送先<%= link_to '一覧を見る',addresses_path,class: "btn btn-primary btn-sm ml-4" %></h5></br>
+<h5>注文履歴<%= link_to '一覧を見る',addresses_path,class: "btn btn-primary btn-sm ml-2" %></h5>
+  </div>
 </div>
-<h4>配送先　<%= link_to '一覧を見る',addresses_path,class: "btn btn-primary" %></h4>
-<h4>注文履歴　一覧を見る</h4>
