--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,15 +1,23 @@
-<div class="container-log-in-content ">
-</br>
-<h2 class="text-center font-weight-bold"><ins>商品詳細</ins></h2>
-　  <div class="row">
-　    <div class="col-4">
-  <%= attachment_image_tag @item, :image, format: 'jpg', size: '400x400', class:'rounded' %></div>
-  　    <div class=" col fw-bolder">
-  <p>商品名:<%= @item.name %></p>
-  <p>商品説明:<%= @item.introduction %></p>
-  <p>税抜き価格:<%= @item.price.to_s(:delimited) %>円</br>
-　   (税込価格): (<%= @item.add_tax_price.to_s( :delimited) %>円)</p>
-　   </div>
-</div>
+<div class="container-item pb-4"></br>
+ <h2 class="text-center font-weight-bold"><ins>商品詳細</ins></h2>
+　<div class="row">
+　 <div class="col-4">
+   <%= attachment_image_tag @item, :image, format: 'jpg', size: '400x400', class:'rounded' %>
+   </div>
+    <div class=" col fw-bolder">
+     <p>商品名:<%= @item.name %></p>
+     <p>商品説明:<%= @item.introduction %></p>
+     <p>税抜き価格:<%= @item.price.to_s(:delimited) %>円</br>
+　      (税込価格): (<%= @item.taxin_price.to_s( :delimited) %>円)</p>
+　 </br>
+　 数量を選択してください</br>
+　 <%= form_with model: @cart_item,url: '/cart_items',local:true do |f| %>
+　 <%= f.hidden_field :item_id, value: @item.id %>
+　 <%= f.hidden_field :customer_id, value: current_customer.id %>
+　 <%= f.select :amount, *[1..10] %>
+　 <%= f.submit 'カートに入れる',class: "btn btn-primary" %>
+   <% end %>
+  </diiv>
+ </div>
 </div>
 
