--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -9,7 +9,7 @@
 　     </div>
 　     <div class="col-auto">
         <ins><%= link_to item.name,item_path(item.id) ,class: "align-self-center" %></ins></br>
-             <%= item.price %>円(税抜)
+             <%= item.price.to_s( :delimited) %>円(税抜)
        </div>
       </div>
      <% end %>
