--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,2 +1,13 @@
-<h1>Public::Orders#new</h1>
-<p>Find me in app/views/public/orders/new.html.erb</p>
+  <h2 class="text-center font-weight-bold"><ins>注文情報入力</ins></h2>
+
+  <h4>支払方法</h4>
+  <%= form_with model:@order,url:'/orders/new',local:true do |f| %>
+  <%= f.radio_button :payment_method, "credit_card" %>
+  <%= f.label :payment_method, "クレジットカード" %>
+
+  <%= f.radio_button :payment_method, "transfer" %>
+  <%= f.label :payment_method, "銀行振込" %>
+<% end %>
+  <h4>お届け先</h4>
+ ご自身の住所
+ 
