インデント修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,12 +27,12 @@ header{
 
 body{
   font-family: 'Noto Sans JP',sans-serif;
+  background-color:#DEB887;
 }
-
-.footer{
- background-color:#550000;
- height:50px;
-}
+// .footer{
+ // background-color:#550000;
+ // height:50px;
+// }
 
 .top-visual,.about-visual,.complete-visual{
   width: 100%;
