--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,29 +1,31 @@
-<h1>配送先編集</h1>
+<div class="container ml-5 mt-4">
+ <h2><ins>配送先編集</ins></h2>
+ <%= form_with model: @address,url: "/addresses/#{@address.id}",local:true do |f| %>
+  <table>
+   <div class="form-group">
+    <tr>
+     <th><%= f.label :郵便番号（ハイフンなし） %></th>
+     <th><%= f.text_field :postal_code %></th>
+    </tr>
 
-<%= form_with model: @address,url: "/addresses/#{@address.id}",local:true do |f| %>
-<table>
-     <div class="form-group">
-      <tr>
-       <th><%= f.label :郵便番号（ハイフンなし） %></th>
-       <th><%= f.text_field :postal_code %></th>
-      </tr>
-     </div>
+   </div>
+   <div class="form-group">
+    <tr>
+     <th><%= f.label :住所 %></th>
+     <th><%= f.text_area :address %></th>
+    </tr>
+   </div>
 
-     <div class="form-group">
-      <tr>
-       <th><%= f.label :住所 %></th>
-       <th><%= f.text_area :address %></th>
-      </tr>
-     </div>
+   <div class="form-group">
+    <tr>
+     <th><%= f.label :宛名 %></th>
+     <th><%= f.text_field :name %></th>
+    </tr>
+   </div>
+  </table>
 
-     <div class="form-group">
-      <tr>
-       <th><%= f.label :宛名 %></th>
-       <th><%= f.text_field :name %></th>
-      </tr>
-     </div>
-
-    </table>
+  <div class="action mt-3">
+   <%= f.submit '変更を保存',class: "btn btn-primary" %>
+  </div>
+ <% end %>
 </div>
-<%= f.submit '変更を保存',class: "btn btn-primary"  %>
-<% end %>
