--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,46 +1,45 @@
-<div class="container-item" style="height:auto;">
+<div class="container mt-5 ml-5" style="height:auto;">
+ <h3><ins>配送先登録/一覧</ins></h3>
 
-<h3><ins>配送先登録/一覧</ins></h3>
+  <%= form_with model: @address,url: "/addresses",local: true do |f| %>
 
-<%= form_with model: @address,url: "/addresses",local: true do |f| %>
-<div class="form-group">
-       <%= f.label :郵便番号（ハイフンなし） %>
-       <%= f.text_field :postal_code,autofocus: true, style: "width:20%", placeholder:"0000000", class: 'form-control' %>
-     </div>
-     <div class="form-group">
-       <%= f.label :住所 %>
-       <%= f.text_area :address,autofocus: true,  style: "width:30%",placeholder:"東京都渋谷区代々木神園町0-0", class: 'form-control' %>
-     </div>
-     <div class="form-group">
-       <%= f.label :宛名 %>
-       <%= f.text_area :name,autofocus: true,  style: "width:20%",placeholder:"昭和花子", class: 'form-control' %>
-     </div>
-  <div class="actions">
-   <%= f.submit "新規登録",class: "btn btn-primary" %>
-  </div>
-  <% end %><br/>
+   <div class="form-group mt-4">
+    <%= f.label :郵便番号（ハイフンなし） %>
+    <%= f.text_field :postal_code,autofocus: true, style: "width:20%", placeholder:"0000000", class: 'form-control' %>
+   </div>
 
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>郵便番号</th>
-        <th>住所</th>
-        <th>宛名</th>
-        <!--<th></th>-->
-        <!--<th></th>-->
-      </tr>
-    </thead>
-    <!--<tbody>-->
-      <% @addresses.each do |address| %>
-      <tr>
-        <td><%= address.postal_code %></td>
-        <td><%= address.address %></td>
-        <td><%= address.name %></td>
+   <div class="form-group">
+    <%= f.label :住所 %>
+    <%= f.text_area :address,autofocus: true,  style: "width:30%",placeholder:"東京都渋谷区代々木神園町0-0", class: 'form-control' %>
+   </div>
 
-        <td><%= link_to '編集する', edit_address_path(address), class: "btn btn-sm btn-primary" %>
-            <%= link_to '削除する',address_path(address),method: :delete,"data-confirm" => "本当に消しますか？", class: "btn btn-sm btn-danger" %>
-        </td>
-        <% end %>
-      </tr>
-    <!--</tbody>-->
-  </table>
+   <div class="form-group">
+    <%= f.label :宛名 %>
+    <%= f.text_area :name,autofocus: true,  style: "width:20%",placeholder:"昭和花子", class: 'form-control' %>
+   </div>
+
+   <div class="actions">
+    <%= f.submit "新規登録",class: "btn btn-primary" %>
+   </div>
+ <% end %><br/>
+
+ <table class="table table-bordered">
+  <thead>
+   <tr>
+    <th>郵便番号</th>
+    <th>住所</th>
+    <th>宛名</th>
+   </tr>
+  </thead>
+  <% @addresses.each do |address| %>
+   <tr>
+    <td><%= address.postal_code %></td>
+    <td><%= address.address %></td>
+    <td><%= address.name %></td>
+    <td><%= link_to '編集する', edit_address_path(address), class: "btn btn-sm btn-primary" %>
+        <%= link_to '削除する',address_path(address),method: :delete,"data-confirm" => "本当に消しますか？", class: "btn btn-sm btn-danger" %>
+    </td>
+    <% end %>
+   </tr>
+ </table>
+</div>
