--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -24,7 +24,7 @@
      <td><%= cart_item.subtotal.to_s( :delimited) %>円</td> <!--小計の表示-->
      <td><%= link_to "削除",cart_item_path(cart_item.id),method: :delete,class: "btn btn-sm btn-danger" %></td>
     </tr>
-   <% end %>
+    <% end %>
      <td></td>
      <td></td>
      <td></td>
@@ -33,7 +33,9 @@
    </tbody>
   </table>
   <%= link_to "買い物を続ける",items_path,class: "btn btn-sm btn-primary" %></br></br>
-  <%= link_to "カートを空にする",cart_items_destroy_all_path,method: :delete,"data-confirm" => "本当にカートを空にしますか？",class: "btn btn-sm btn-danger" %>
-  </br></br>
+  <%= link_to "カートを空にする",cart_items_destroy_all_path,method: :delete,"data-confirm" => "本当にカートを空にしますか？",class: "btn btn-sm btn-danger" %></br></br>
+  <div class="text-center">
+  <%= link_to "情報入力に進む",new_order_path,class: "btn btn-sm btn-success" %></br></br>
+  </div>
  </div>
 </div>
