[更新」注文機能コントローラ

--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row mt-5">
    <h2><ins><%= @customer.full_name %>さんの会員情報編集</ins></h2>
   </div>
-  <%= form_with model: @customer,url: "/admin/customers/#{@customer.id}",local:true do |f| %>
+  <%= form_with model: @customer,url: "/customers/update",local:true do |f| %>
    <table>
      <div class="form-group">
       <tr>
