--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,7 +36,7 @@ body{
 
 .top-visual,.about-visual,.complete-visual{
   width: 100%;
-  height: 600px;
+  height: 100%;
   background-image: url(sweets2.JPG);
   background-size: cover;
   background-position: center;
@@ -44,7 +44,7 @@ body{
 
 .top-visual-content,.about-visual-content,.complete-content{
   width: 100%;
-  height: 600px;
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.5); /* 背景色を半透明にする */
   text-align: center;
   padding-top: 105px;
