--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,15 +1,12 @@
+<h2 class="text-center mt-3">新規会員登録</h2>
 <div class="container-sign-in-content d-flex flex-column align-items-center justify-content-center" style="height:660px;">
- <div class="row mt-3">
-  <h2>新規会員登録</h2>
- </div>
- <div class="row">
- <table class="table">
-    <%= form_with model:@customer,url: customer_registration_path,local: true do |f| %>
-    <%= render "customers/shared/error_messages", resource: resource %>
+ <%= form_with model:@customer,url: customer_registration_path,local: true do |f| %>
+ <%= render "customers/shared/error_messages", resource: resource %>
+  <table class="table">
      <div class="form-group">
       <tr>
        <th><%= f.label :（姓） %></th>
-       <th><%= f.text_field :last_name,autofocus: true, placeholder:"山田", class: 'form-control'%></th>
+       <th><%= f.text_field :last_name,autofocus: true, placeholder:"山田", class: 'form-control' %></th>
        <th><%= f.label :（名） %></th>
        <th><%= f.text_field :first_name,autofocus: true, placeholder:"太郎", class: 'form-control' %></th>
       </tr>
@@ -70,13 +67,11 @@
       <tr>
        <th><%= f.submit "新規登録",class: "btn btn-primary" %></th>
       </tr>
+      </table>
      </div>
-    </table>
+     <% end %>
     </div>
-   </div>
-  <% end %>
   <div class="container-sign-in-content pb-3">
-  <h4 class="text-center"><既に登録済みの方></h4>
+  <h4 class="text-center"><ins><既に登録済みの方></ins></h4>
    <h5 class="text-center"><ins><%=link_to 'こちら', customer_session_path %></ins>からログインしてください。</h5>
   </div>
-<!--</div>-->
