--- a/app/views/public/orders/confirm.erb
+++ b/app/views/public/orders/confirm.erb
@@ -1,12 +1,13 @@
+  <h3 class="text-center font-weight-bold"><ins>注文情報確認</ins></h3>
+  <div class="container pt-2" style="height:auto; width:auto;">
+   <div class=row pt-3>
 <table class="table">
    <thead>
     <tr>
      <th>商品名</th>
      <th>単価（税込）</th>
      <th>数量</th>
-     <th></th>
      <th>小計</th>
-     <th></th>
     </tr>
    </thead>
    <tbody>
@@ -14,18 +15,35 @@
 　  <tr>
      <td><%= cart_item.item.name %></td>
      <td><%= cart_item.item.taxin_price.to_s( :delimited) %>円</td> <!--税込の単価表示-->
-         <%= form_with model: cart_item,local:true do |f| %> <!--セレクトボックスで数量を表示する-->
-     <td><%= f.select :amount, *[1..10] %></td>
-　   <td><%= f.submit '変更',class: "btn btn-sm btn-primary" %></td>
-         <% end %>
+     <td><%= cart_item.amount %></td>
      <td><%= cart_item.subtotal.to_s( :delimited) %>円</td> <!--小計の表示-->
-     <td><%= link_to "削除",cart_item_path(cart_item.id),method: :delete,class: "btn btn-sm btn-danger" %></td>
     </tr>
     <% end %>
-    <td></td>
-     <td></td>
-     <td></td>
-     <td></td>
-     <td><h5><ins>合計金額<%= @total.to_s(:delimited) %>円</ins></h5></td>
    </tbody>
   </table>
+  </div>
+ <div class="row pt-2">
+ 商品合計:<%= @subtotal.to_s(:delimited) %>円</br>
+ 送 料：800円</br>
+ 請求金額:<%= @order.total_payment.to_s(:delimited) %>円
+  </div>
+  <div class="row mt-4">
+  <div class="font-weight-bold">お届け先</div><br>
+  〒<%= @order.postal_code %>
+  <%= @order.address %>
+  <%= @order.name %>
+  </div>
+  <div class="row mt-4">
+  <div class="font-weight-bold">支払い方法</div><br>
+  <%= @order.payment_method_i18n %>
+  </div></br>
+<%= form_with model: @order, url: "/orders", local:true do |f| %>
+<%= f.hidden_field :postal_code %>
+<%= f.hidden_field :address %>
+<%= f.hidden_field :name %>
+<%= f.hidden_field  :payment_method %>
+<%= f.hidden_field  :total_payment %>
+<%= f.submit "注文を確定する", class: "btn btn-success" %>
+<% end %>
+  </div>
+
