--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,49 +1,50 @@
-   <h2 class="text-center font-weight-bold"><ins>注文情報入力</ins></h2>
+  <h2 class="text-center font-weight-bold"><ins>注文情報入力</ins></h2>
 
-  <div class="container d-flex align-items-center justify-content-center" style="height:auto;">
-  <div class="col-md-5" style="height:600px;">
-  <h4><ins>支払方法</ins></h4>
-  <%= form_with model:@order,url:'/orders/new',local:true do |f| %>
+  <div class="container d-flex align-items-center justify-content-center pt-2" style="height:auto; width:auto;">
+  <%= form_with model: @order,url:'/orders/confirm',local:true do |f| %>
+  <h5 class="payment_method"><ins>支払方法</ins></h5>
   <%= f.radio_button :payment_method, "credit_card" %>
   <%= f.label :payment_method, "クレジットカード" %>
   </br>
   <%= f.radio_button :payment_method, "transfer" %>
   <%= f.label :payment_method, "銀行振込" %>
+
+  <h5 class="address mt-4"><ins>お届け先</ins></h5>
+<!--customerの住所-->
+  <%= f.radio_button :select_address, "0" %>
+  <%= f.label :select_address_0, "ご自身の住所" %></br>
+  <div class="customer-address pl-3">
+  〒<%= @customer.postal_code %>
+  <%= @customer.address %></br>
+  <%= @customer.full_name %>
   </div>
-
-  <div class="col-md-7">
-  <h4 class="address mt-4"><ins>お届け先</ins></h4></br>
-
-  <h5><%= f.radio_button :select_address, "0" %>
-  <%= f.label :select_address_0, "ご自身の住所" %></h5>
-  <%= @customer.postal_code %>
-  <%= @customer.address %>
-  <%= @customer.full_name %></br>
-  </br>
-
-  <h5 class="exist-address mt-4">
+<!--登録済みの住所-->
+  <div class="exist-address mt-2">
    <%= f.radio_button :select_address, "1" %>
    <%= f.label :select_address_1, "登録済み住所から選択" %>
-  </h5>
+  </div>
+  <div class="select-address pl-4">
   <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :full_address) %>
-
-  <h5 class="new-address mt-5">
+  </div>
+<!--新しく登録する住所-->
+  <div class="new-address mt-2">
    <%= f.radio_button :select_address, "2" %>
    <%= f.label :select_address_2, "新しいお届け先" %>
-  </h5>
-　<% end %>
-  <%= form_with model: @address,url: "/addresses",local: true do |f| %>
+  </div>
+   <div class="new-address-content pl-4">
        <%= f.label :郵便番号（ハイフンなし） %>
-       <%= f.text_field :postal_code,autofocus: true, style: "width:20%",placeholder:"0000000", class: 'form-control' %>
+       <%= f.text_field :postal_code,autofocus: true, style: "width:50%",placeholder:"例）0000000", class: 'form-control' %>
 
        <%= f.label :住所 %>
-       <%= f.text_area :address,autofocus: true,style: "width:30%", placeholder:"東京都渋谷区代々木神園町0-0", class: 'form-control' %>
+       <%= f.text_area :address,autofocus: true,style: "width:90%", placeholder:"例）東京都渋谷区代々木神園町0-0", class: 'form-control' %>
 
        <%= f.label :宛名 %>
-       <%= f.text_area :name,autofocus: true, style: "width:20%",placeholder:"昭和花子", class: 'form-control' %>
+       <%= f.text_field :name,autofocus: true, style: "width:50%",placeholder:"例）昭和花子", class: 'form-control' %>
+         </div>
+
   <div class="actions mt-3">
-   <%= f.submit "新規登録",class: "btn btn-primary" %>
+   <%= f.submit "確認画面へ進む",class: "btn btn-primary" %>
   </div>
   <% end %><br/>
-  </div>
+  <!--</div>-->
   </div>
