--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,14 +1,14 @@
-<h1>商品新規登録</h1>
-
-<%= form_with model: @item,url: '/admin/items',local:true do |f| %>
-<h4>商品画像</h4>
-<%= f.attachment_field :image %>
-<h4>商品名</h4>
-<%= f.text_field :name %>
-<h4>商品説明</h4>
-<%= f.text_area :introduction %>
-<h4>ジャンル</h4>
-<h4>税抜き価格</h4>
-<%= f.number_field :price %>円
-<%= f.submit '新規登録' %>
-<% end %>
+<h3 class="text-center font-weight-bold pt-5">商品新規登録</h3>
+ <div class="container d-flex align-items-center pt-5" style="height:auto; width:auto;">
+　<%= form_with model: @item,url: '/admin/items',local:true do |f| %>
+　<h5>商品画像</h5>
+　<%= f.attachment_field :image %>
+　<h5>商品名</h5>
+　<%= f.text_field :name %>
+　<h5>商品説明</h5>
+　<%= f.text_area :introduction %>
+　<h5>税抜き価格</h5>
+　<%= f.number_field :price %>円</br></br>
+　<%= f.submit '新規登録',class: "btn btn-primary" %>
+　<% end %>
+</div>
