--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -13,6 +13,6 @@
   </table>
   </br>
   <h5>配送先<%= link_to '一覧を見る',addresses_path,class: "btn btn-primary btn-sm ml-4" %></h5></br>
-  <h5>注文履歴<%= link_to '一覧を見る',addresses_path,class: "btn btn-primary btn-sm ml-2" %></h5>
+  <h5>注文履歴<%= link_to '一覧を見る',orders_path,class: "btn btn-primary btn-sm ml-2" %></h5>
  </div>
 </div>
