--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Public::Orders#index</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+  <h3 class="text-center font-weight-bold"><ins>注文履歴一覧</ins></h3>
+  <div class="container">
+   <% @orders.each do |order| %>
+  注文日　<%= order.updated_at.strftime('%Y/%m/%d %H:%M') %></br>
+  支払い金額:<%= order.total_payment %>円</br>
+  支払い方法:<%= order.payment_method_i18n %>
+  <%= link_to "注文詳細",order_path(order.id),class:"btn btn-sm btn-primary" %></br></br>
+
+<% end %>
+</div>
