--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,20 +1,18 @@
-<h1>会員一覧</h1>
-
-<table>
-  <tr>
-    <th>商品ID</th>
+<h3 class="text-center font-weight-bold pt-5">会員一覧</h3>
+ <div class="container d-flex align-items-center justify-content-center pt-5" style="height:auto; width:auto;">
+  <table class="table">
+   <tr>
+    <th>会員ID</th>
     <th>氏名</th>
     <th>メールアドレス</th>
     <th>ステータス</th>
-  </tr>
-
+   </tr>
   <% @customers.each do |customer| %>
   <tr>
-　<td><%= customer.id %></td>
-  <td><%= customer.full_name %></td>
-  <td><%= customer.email %></td>
-  <td><%= customer.is_deleted %></td>
+　 <td><%= customer.id %></td>
+   <td><%= link_to customer.full_name,admin_customer_path(customer.id) %></td>
+   <td><%= customer.email %></td>
+   <td><%= customer.is_deleted %></td>
   </tr>
-<% end %>
-
+ <% end %>
 </table>
