--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,8 +1,8 @@
-<h1><%= @customer.full_name %>さんの会員情報編集</h1>
-
-<%= form_with model: @customer,url: "/admin/customers/#{@customer.id}",local:true do |f| %>
-<table>
-<div class="form-group">
+<h3 class="text-center font-weight-bold pt-5"><%= @customer.full_name %>さんの会員情報編集</h3>
+ <div class="container d-flex align-items-center justify-content-center pt-5">
+  <%= form_with model: @customer,url: "/admin/customers/#{@customer.id}",local:true do |f| %>
+   <table>
+    <div class="form-group">
       <tr>
        <th><%= f.label :（姓） %></th>
        <th><%= f.text_field :last_name %></th>
@@ -47,14 +47,18 @@
        <th><%= f.text_field :telephone_number %></th>
       </tr>
      </div>
-     <div class="form-group">
+     <div class="form-group pt-3">
       <tr>
-       <th><%= f.label :会員ステータス %></th>
-       <th><%= f.radio_botton :is_deleted, true %></th>
-       <th><%= f.label :is_deleted,'有効',:true %></th>
+       <th>会員ステータス</th>
+       <th><%= f.radio_button :is_deleted, "false" %>
+           <%= f.label :is_deleted,'有効' %></th>
+       <th><%= f.radio_button :is_deleted, "true" %>
+           <%= f.label :is_deleted,'退会' %></th>
       </tr>
      </div>
     </table>
-</div>
+  </div>
+ <div class="btn pt-3">
 <%= f.submit '変更を保存',class: "btn btn-primary"  %>
 <% end %>
+</div>
