--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,12 +1,28 @@
   <h3 class="text-center font-weight-bold"><ins>注文履歴一覧</ins></h3>
-  <div class="container">
-   <% @orders.each do |order| %>
-  注文日　<%= order.updated_at.strftime('%Y/%m/%d %H:%M') %></br>
-  支払い金額:<%= order.total_payment %>円</br>
-  支払い方法:<%= order.payment_method_i18n %>
-  <%= link_to "注文詳細",order_path(order.id),class:"btn btn-sm btn-primary" %></br></br>
-  <% end %>
-  <% @order_details.each do |order_detail| %>
-  <%= order_detail.item.name %>
-  <% end %>
+   <table class="table table-bordered">
+    <thead>
+   　<tr>
+      <th>注文日時</th>
+      <th>配送先</th>
+      <th>注文商品</th>
+      <th>支払金額</th>
+      <th>注文詳細</th>
+     </tr>
+    </thead>
+    <% @orders.each do |order| %>
+     <tr>
+      <td><%= order.updated_at.strftime('%Y/%m/%d %H:%M') %></td>
+      <td>〒<%= order.postal_code %></br>
+            <%= order.address %></br>
+            <%= order.name %></br>
+      </td>
+      <td><% order.order_details.each do |order_detail| %>
+          <%= order_detail.item.name %></br>
+          <% end %>
+      </td>
+      <td><%= order.total_payment %>円</td>
+      <td><%= link_to "表示する",order_path(order.id),class:"btn btn-sm btn-primary" %></td>
+  　<% end %>
+   </tr>
+　</tabl>
 </div>
