--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -11,7 +11,7 @@
   <%= f.label :payment_method, "銀行振込" %>
 
   <h5 class="address mt-4"><ins>お届け先</ins></h5>
-  
+
 　<!--customerの住所-->
   <%= f.radio_button :select_address, "0" %>
   <%= f.label :select_address_0, "ご自身の住所" %></br>
@@ -20,16 +20,16 @@
   <%= @customer.address %></br>
   <%= @customer.full_name %>
   </div>
-  
+
 　<!--登録済みの住所-->
   <div class="exist-address mt-2">
    <%= f.radio_button :select_address, "1" %>
    <%= f.label :select_address_1, "登録済み住所から選択" %>
   </div>
   <div class="select-address pl-4">
-  <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :full_address) %>
+  <%= f.select :address_id, options_from_collection_for_select(current_customer.addresses.all, :id, :full_address) %>
   </div>
-  
+
 　<!--新しく登録する住所-->
   <div class="new-address mt-2">
    <%= f.radio_button :select_address, "2" %>
